--- a/src/templates/docker.ejs
+++ b/src/templates/docker.ejs
@@ -1,7 +1,15 @@
 FROM public.ecr.aws/lambda/nodejs:14
 
-COPY index.js package.json  ${LAMBDA_TASK_ROOT}
+ARG CODEARTIFACT_AUTH_TOKEN
 
-RUN npm install
+RUN npm i -g yarn
+
+RUN yarn config set registry https://registry.npmjs.org
+RUN yarn config set @feprisa:registry https://feprisa-181459816757.d.codeartifact.us-east-1.amazonaws.com/npm/internal/
+RUN yarn config set //feprisa-181459816757.d.codeartifact.us-east-1.amazonaws.com/npm/internal/:_authToken ${CODEARTIFACT_AUTH_TOKEN}
+
+COPY index.js package.json ${LAMBDA_TASK_ROOT}
+
+RUN yarn
 
 CMD [ "index.handler" ]
